# python-lcm

./: .gitignore  LICENSE  README.rst  pyproject.toml  test.py
install/: install_lcm.sh
lcm/: __init__.py  adapter.py  main.py  structure.py
test/: lcm_run.py  lcm_run_auto.py  test_error_no_freq.py
tests/: lcm  lcm_run_auto.py  test_error.py  test_error_no_freq.py  test_lcm_run.py  test_lcm_run_auto.py
